# webscraper_clean

./: Cargo.toml  LICENSE  README.md  config.json  notes.txt
src/: argparse.rs  download.rs  fileio.rs  image_data.rs  json_code.rs  logging.rs  main.rs  percentage.rs  scan.rs  web.rs
src/web/: fetch.rs  html.rs
