[package]
author = "Nayan Sawyer"
name = "w10s_webscraper"
version = "0.1.0"
description = "----\n\nAn example webscraper\nfolder defaults to current directory"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["clock"] }
clap = { version = "4.3.9", features = ["derive"] }
filetime_creation = "0.1.5"
function_name = "0.3.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.19"
log4rs = "1.2.0"
md5 = "0.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.16.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
